Closed Bug 1274206 Opened 10 years ago Closed 10 years ago

|mRecognition->mTestConfig.mFakeRecognitionService| undefined

Categories

(Core :: Audio/Video: Playback, defect)

All
Gonk (Firefox OS)
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla49
Tracking Status
firefox49 --- fixed

People

(Reporter: tzimmermann, Assigned: tzimmermann)

References

Details

Attachments

(1 file)

This is a follow-up for bug 1206637. Happens on B2G.
Comment on attachment 8754281 [details] MozReview Request: Bug 1274206: Use MediaPref for |mRecognition->mTestConfig.mFakeRecognitionService|, r?cpearce https://reviewboard.mozilla.org/r/53892/#review50602 Fly by review, seeing that I broke that...
Attachment #8754281 - Flags: review+
Comment on attachment 8754281 [details] MozReview Request: Bug 1274206: Use MediaPref for |mRecognition->mTestConfig.mFakeRecognitionService|, r?cpearce Cool, thanks!
Attachment #8754281 - Flags: review?(cpearce)
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla49
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: