Bug 1274206: Use MediaPref for |mRecognition->mTestConfig.mFakeRecognitionService|, r=jyavenard

MozReview-Commit-ID: Jb9CbpXYhBU